Hacky fix for vertical spacing on homepage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -585,7 +585,7 @@ button:focus {
 
 .post-list li {
   border-bottom: solid 1px #0b0c0c;
-  padding: 0;
+  padding: 0 0 1.5rem;
   /* whitespace clearing hack */
   font-size: 0;
 }
